--- a/css/main.css
+++ b/css/main.css
@@ -10,8 +10,7 @@ html
 -webkit-text-size-adjust: 100%;
 text-size-adjust: 100%;
   box-sizing: border-box;
-  font: normal 100%/1.3 sans-serif;
-
+  font: normal 100%1.3 sans-serif;
 }
 
 *, *::before, *::after {
@@ -62,15 +61,11 @@ nav li {
   text-align: center;
 }
 
-}
-
 @media only screen and (min-width: 38em)
 
-htmk {
+html {
   font-size: 110%
   line-height: 1.4;
-}
-
 }
 
 @media only screen and (min-width: 60em)
@@ -97,12 +92,8 @@ h1 {
   margin-right: 1.5rem;
 }
 
-}
-
 @media only screen and (min-width: 90em)
 
 html {
   font-size: 130%;
-}
-
 }
