--- a/css/main.css
+++ b/css/main.css
@@ -4,13 +4,13 @@
 @-webkit-viewport { width: device-width; scale: 1; }
 @viewport { width: device-width; scale: 1; }
 
-html
--moz-text-size-adjust: 100%;
--ms-text-size-adjust: 100%;
--webkit-text-size-adjust: 100%;
-text-size-adjust: 100%;
+html {
+  -moz-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
   box-sizing: border-box;
-  font: normal 100%1.3 sans-serif;
+  font: normal 100%/1.3 sans-serif;
 }
 
 *, *::before, *::after {
@@ -27,7 +27,7 @@ header {
   text-align: center;
 }
 
-h1{
+h1 {
   margin: 0 0 .5rem;
   font-size: 1.5rem;
 }
@@ -51,49 +51,57 @@ nav a {
 
 nav a:hover {
   background-color: #333;
-  color: #fff
+  color: #fff;
 }
 
-@media only screen and (min-width: 25em)
+@media only screen and (min-width: 25em) {
 
-nav li {
-  display: inline-block;
-  text-align: center;
+  nav li {
+    display: inline-block;
+    text-align: center;
+  }
+
 }
 
-@media only screen and (min-width: 38em)
+@media only screen and (min-width: 38em) {
 
-html {
-  font-size: 110%
-  line-height: 1.4;
+  html {
+    font-size: 110%;
+    line-height: 1.4;
+  }
+
 }
 
-@media only screen and (min-width: 60em)
+@media only screen and (min-width: 60em) {
 
-html {
-  font-size: 120%;
-  line-height: 1.5;
+  html {
+    font-size: 120%;
+    line-height: 1.5;
+  }
+
+  header {
+    padding-left: 1rem;
+    padding-right: 1rem;
+    text-align: left;
+  }
+
+  h1,
+  nav {
+    display: inline-block;
+    vertical-align: middle;
+  }
+
+  h1 {
+    margin-bottom: 0;
+    margin-right: 1.5rem;
+  }
+
 }
 
-header {
-  padding-left: 1rem;
-  padding-right: 1rem;
-  text-align: left;
-}
+@media only screen and (min-width: 90em) {
 
-h1,
-nav {
-  display: inline-block;
-  vertical-align: middle;
-}
+  html {
+    font-size: 130%;
+  }
 
-h1 {
-  margin-bottom: 0;
-  margin-right: 1.5rem;
-}
-
-@media only screen and (min-width: 90em)
-
-html {
-  font-size: 130%;
 }
